# tingotap

./: pyproject.toml
configs/: condition.yaml  tap_config.json
src/tingotap/: __init__.py  config_gate.py  main.py  tap_assist.py
src/tingotap.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
